--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,9 @@
 
     <string name="action_settings">Settings</string>
 
+    <string name="valid">Form is valid. Card is successfully added.</string>
+    <string name="invalid">Form is invalid. Card is not added successful.</string>
+    <string name="scan_with_card_io">Acan with card.io</string>
+    <string name="error">Please select a card</string>
 
 </resources>
